syntax = "proto2";

import "kubetee.proto";

package tee;

service EnclaveService {
  rpc TeeRunRemote(PbTeeRunRemoteRequest)
    returns (PbTeeRunRemoteResponse) {
  }
}
